Changelog of Ambient Occlusion tool

050705: Removed automatic UV atlas generation. Not practical with UVAtlas
		on hi-poly meshes, better do in art package before subdivision.
050704: Changed to June 2005 SDK.
		Adding automatic UV atlas generation for meshes without atlas.