@@ -1,8 +1,6 @@
 // --------------------------------------------------------------------------
 // Dingus project - a collection of subsystems for game/graphics applications
 // --------------------------------------------------------------------------
-#include "stdafx.h"
-
 #include "VertexFormat.h"
 
 using namespace dingus;
