@@ -7,7 +7,6 @@
 //  Updated Oct 16, 2001 to decode DX9 decls
 //
 //////////////////////////////////////////////////////////////////////////////
-#include "stdafx.h"
 #include "crackdecl.h"
 
 //----------------------------------------------------------------------------
