@@ -1,4 +1,3 @@
-#include "stdafx.h"
 #include "d3d.h"
 
 
