@@ -1,6 +1,15 @@
 #ifndef __D3D_H
 #define __D3D_H
 
+// windows
+#define _WIN32_WINNT 0x0500
+#include <windows.h>
+
+#include <d3d9.h>
+#include <d3dx9.h>
+#include <boost/intrusive_ptr.hpp>
+
+#include <stdexcept>
 
 namespace boost {
 inline void intrusive_ptr_add_ref( IUnknown* p ) { p->AddRef(); }
